--- a/client-react/package.json
+++ b/client-react/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "4.5.2",
+    "create-history": "^2.1.1",
+    "history": "5.0.0",
     "jwt-decode": "2.2.0",
     "material-table": "^1.69.0",
     "react": "^16.13.1",
